--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@
 @import url('http://fonts.cdnfonts.com/css/pokemon-solid');
                 
 body {
-    background: url(https://img.wallpapersafari.com/desktop/1024/576/1/34/bdYuDT.jpg);
+    background: url(https://archives.bulbagarden.net/media/upload/thumb/9/96/Box_Pikapika_Platinum_BDSP.png/220px-Box_Pikapika_Platinum_BDSP.png);
     margin: 0;
     font-family: 'Pokemon Solid', sans-serif;
                                                 
@@ -32,6 +32,7 @@ body {
     padding: .3em;
   }
   
+
   input[type=submit] {
     padding: .3em;
     color: rgb(248, 216, 5);
